--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,21 @@
   text-align: center;
   align-content: center;
 }
+
+.pokemon-details-card{
+  margin: 15px;
+  text-align: center;
+}
+.pokemon-row{
+  margin-top: 20px;
+}
+.Pokemon-card{
+  margin: 10px;
+}
+.home-section{
+  margin-left: 50px;
+  margin-right: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
