--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
 .App {
   text-align: center;
   align-content: center;
+  margin-top: 2%;
+  padding: 10px;
 }
-
 .pokemon-details-card{
-  margin: 15px;
   text-align: center;
+  align-content: center;
+  margin-left: 15%;
+  margin-top: 2%;
+  margin-right: 15%;
 }
 .pokemon-row{
   margin-top: 20px;
@@ -14,8 +18,8 @@
   margin: 10px;
 }
 .home-section{
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-left: 12%;
+  margin-right: 10%;
   display: flex;
   flex-direction: column;
   align-items: center;
